--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.7",
-    "node-sass": "^5.0.0",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "node-sass": "^5.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "1.0.0",
     "primereact": "3.0.0",
