--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "node-sass": "^5.0.0",
     "primeflex": "^2.0.0",
     "primeicons": "1.0.0",
